k8s/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: observability
spec:
  ingressClassName: nginx
  rules:
    - host: alertmanager.platform-lab.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kps-alertmanager
                port:
                  number: 9093
