k8s/platform-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-api
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: platform-lab.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: platform-api
                port:
                  number: 8080
