k8s/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: observability
spec:
  ingressClassName: nginx
  rules:
    - host: prometheus.platform-lab.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kps-prometheus
                port:
                  number: 9090
